--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         class="max-w-screen-lg mx-auto bg-[#F85559] rounded-full px-5 py-2 my-5"
       >
         <div class="navbar flex justify-between">
-          <div class="text-white text-sm">
+          <div class="text-white text-sm hidden lg:block">
             <ul class="flex justify-around gap-3 font-medium">
               <li><a> Home </a></li>
               <li><a>About Us</a></li>
@@ -60,7 +60,7 @@
             <img src="./images/logo.png" alt="" class="h-12" />
             <a class="btn btn-ghost normal-case text-3xl"> Fruit Brust</a>
           </div>
-          <div class="opacity-0 lg:opacity-100">
+          <div class="opacity-0 lg:opacity-100 relative">
             <div class="form-control relative">
               <input
                 type="text"
@@ -68,9 +68,41 @@
                 class="input lg:w-72 rounded-full text-sm"
               />
             </div>
-            <div class="absolute right-56">
-                <i class="fa-solid fa-magnifying-glass"></i>
+            <div class="absolute left-64">
+              <i class="fa-solid fa-magnifying-glass"></i>
             </div>
+          </div>
+          <div class="dropdown dropdown-end lg:hidden">
+            <label tabindex="0" class="btn btn-ghost btn-circle avatar">
+              <div class="w-10 rounded-full">
+                <i class="fa-solid fa-bars mt-3 w-10"></i>
+              </div>
+            </label>
+            <ul
+              tabindex="0"
+              class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 rounded-box w-56"
+            >
+              <li>
+                <a>
+                  <div class="relative">
+                    <div class="form-control relative">
+                      <input
+                        type="text"
+                        placeholder="Search here"
+                        class="input text-sm"
+                      />
+                    </div>
+                    <div class="absolute bottom-3 left-40">
+                      <i class="fa-solid fa-magnifying-glass"></i>
+                    </div>
+                  </div>
+                </a>
+              </li>
+              <li><a>Home</a></li>
+              <li><a>About Us</a></li>
+              <li><a>Shop</a></li>
+              <li><a>All Fruits</a></li>
+            </ul>
           </div>
         </div>
       </nav>
