navbar bug fixed

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <img src="./images/logo.png" alt="" class="h-12" />
             <a class="btn btn-ghost normal-case text-3xl"> Fruit Brust</a>
           </div>
-          <div class="opacity-0 lg:opacity-100 relative">
+          <div class="hidden lg:block relative">
             <div class="form-control relative">
               <input
                 type="text"
@@ -68,7 +68,7 @@
                 class="input lg:w-72 rounded-full text-sm"
               />
             </div>
-            <div class="absolute left-64">
+            <div class="absolute top-3 left-64">
               <i class="fa-solid fa-magnifying-glass"></i>
             </div>
           </div>
