--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
       .font-lato {
         font-family: "Lato", sans-serif;
       }
+      p{
+        color: #12121299;
+      }
     </style>
   </head>
   <body class="font-lato p-2 md:p-3 lg:p-0">
@@ -266,7 +269,7 @@
           <!-- heading and description -->
           <div class="lg:max-w-lg space-y-5 text-center lg:text-left">
             <h3 class="text-4xl font-extrabold">Deal of the day</h3>
-            <p style="color:#12121299;">
+            <p>
               Contrary to popular belief, is not simply random text. It has
               roots in a piece of classical Latin literature from 45 BC, making
               it over 2000 years old.
@@ -279,7 +282,7 @@
                 <span class="countdown font-mono text-4xl font-extrabold">
                   <span style="--value: 15"></span>
                 </span>
-                <span style="color:#12121299;">Days</span>
+                <p>Days</p>
               </div>
               <div class="mt-2">
                 <i class="fa-solid fa-ellipsis-vertical"></i>
@@ -288,7 +291,7 @@
                 <span class="countdown font-mono text-4xl font-extrabold">
                   <span style="--value: 10"></span>
                 </span>
-                <span style="color:#12121299;">Hours</span>
+                <p>Hours</p>
               </div>
               <div class="mt-2">
                 <i class="fa-solid fa-ellipsis-vertical"></i>
@@ -297,7 +300,7 @@
                 <span class="countdown font-mono text-4xl font-extrabold">
                   <span style="--value: 24"></span>
                 </span>
-                <span style="color:#12121299;">Minutes</span>
+                <p>Minutes</p>
               </div>
               <div class="mt-2">
                 <i class="fa-solid fa-ellipsis-vertical"></i>
@@ -306,13 +309,98 @@
                 <span class="countdown font-mono text-4xl font-extrabold">
                   <span style="--value: 18"></span>
                 </span>
-                <span style="color:#12121299;">Seconds</span>
+                <p>Seconds</p>
               </div>
             </div>
           </div>
         </div>
-
-
+        <!-- cards -->
+        <div class="mt-12 grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+          <!-- card-1 -->
+          <div class="card w-72 lg:w-60 rounded-sm border py-8 space-y-4 mx-auto">
+            <figure>
+              <img
+                src="/images/fruit6.png"
+                alt="Shoes"
+              />
+            </figure>
+            <div class="px-10 text-center space-y-2">
+              <h2 class="text-xl font-bold border-b-2 px-">12.90$ - 18.85$!</h2>
+              <p>Apples</p>
+              <div class="rating rating-sm gap-2">
+                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" checked />
+                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+              </div>
+              <p class="text-[#F85559]">Details</p>
+            </div>
+          </div>
+          <!-- card-2 -->
+          <div class="card w-72 lg:w-60 rounded-sm border py-8 space-y-4 mx-auto">
+            <figure>
+              <img
+                src="/images/fruit7.png"
+                alt="Shoes"
+              />
+            </figure>
+            <div class="px-10 text-center space-y-2">
+              <h2 class="text-xl font-bold border-b-2 px-">12.90$ - 18.85$!</h2>
+              <p>Orange</p>
+              <div class="rating rating-sm gap-2">
+                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" checked />
+                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+              </div>
+              <p class="text-[#F85559]">Details</p>
+            </div>
+          </div>
+          <!-- card-3 -->
+          <div class="card w-72 lg:w-60 rounded-sm border py-8 space-y-4 mx-auto">
+            <figure>
+              <img
+                src="/images/fruit8.png"
+                alt="Shoes"
+              />
+            </figure>
+            <div class="px-10 text-center space-y-2">
+              <h2 class="text-xl font-bold border-b-2 px-">12.90$ - 18.85$!</h2>
+              <p>Red Dragon</p>
+              <div class="rating rating-sm gap-2">
+                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" checked />
+                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+              </div>
+              <p class="text-[#F85559]">Details</p>
+            </div>
+          </div>
+          <!-- card-4 -->
+          <div class="card w-72 lg:w-60 rounded-sm border py-8 space-y-4 mx-auto">
+            <figure>
+              <img
+                src="/images/fruit9.png"
+                alt="Shoes"
+              />
+            </figure>
+            <div class="px-10 text-center space-y-2">
+              <h2 class="text-xl font-bold border-b-2 px-">12.90$ - 18.85$!</h2>
+              <p>Banana</p>
+              <div class="rating rating-sm gap-2">
+                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" checked />
+                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+              </div>
+              <p class="text-[#F85559]">Details</p>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
 
