--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       src="https://kit.fontawesome.com/d7b7563d24.js"
       crossorigin="anonymous"
     ></script>
+    <!-- feather icon -->
+
     <!-- tailwind custom color -->
     <script>
       tailwind.config = {
@@ -40,7 +42,7 @@
       .font-lato {
         font-family: "Lato", sans-serif;
       }
-      p{
+      p {
         color: #12121299;
       }
     </style>
@@ -317,93 +319,256 @@
         <!-- cards -->
         <div class="mt-12 grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
           <!-- card-1 -->
-          <div class="card w-72 lg:w-60 rounded-sm border py-8 space-y-4 mx-auto">
+          <div
+            class="card w-72 lg:w-60 rounded-sm border py-8 space-y-4 mx-auto"
+          >
             <figure>
-              <img
-                src="/images/fruit6.png"
-                alt="Shoes"
-              />
+              <img src="/images/fruit6.png" alt="Shoes" />
             </figure>
             <div class="px-10 text-center space-y-2">
               <h2 class="text-xl font-bold border-b-2 px-">12.90$ - 18.85$!</h2>
               <p>Apples</p>
               <div class="rating rating-sm gap-2">
-                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
-                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" checked />
-                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
-                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
-                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                <input
+                  type="radio"
+                  name="rating-6"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-6"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-6"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-6"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-6"
+                  class="mask mask-star-2 bg-orange-400"
+                />
               </div>
               <p class="text-[#F85559]">Details</p>
             </div>
           </div>
           <!-- card-2 -->
-          <div class="card w-72 lg:w-60 rounded-sm border py-8 space-y-4 mx-auto">
+          <div
+            class="card w-72 lg:w-60 rounded-sm border py-8 space-y-4 mx-auto"
+          >
             <figure>
-              <img
-                src="/images/fruit7.png"
-                alt="Shoes"
-              />
+              <img src="/images/fruit7.png" alt="Shoes" />
             </figure>
             <div class="px-10 text-center space-y-2">
               <h2 class="text-xl font-bold border-b-2 px-">12.90$ - 18.85$!</h2>
               <p>Orange</p>
               <div class="rating rating-sm gap-2">
-                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
-                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" checked />
-                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
-                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
-                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                <input
+                  type="radio"
+                  name="rating-6"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-6"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-6"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-6"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-6"
+                  class="mask mask-star-2 bg-orange-400"
+                />
               </div>
               <p class="text-[#F85559]">Details</p>
             </div>
           </div>
           <!-- card-3 -->
-          <div class="card w-72 lg:w-60 rounded-sm border py-8 space-y-4 mx-auto">
+          <div
+            class="card w-72 lg:w-60 rounded-sm border py-8 space-y-4 mx-auto"
+          >
             <figure>
-              <img
-                src="/images/fruit8.png"
-                alt="Shoes"
-              />
+              <img src="/images/fruit8.png" alt="Shoes" />
             </figure>
             <div class="px-10 text-center space-y-2">
               <h2 class="text-xl font-bold border-b-2 px-">12.90$ - 18.85$!</h2>
               <p>Red Dragon</p>
               <div class="rating rating-sm gap-2">
-                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
-                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" checked />
-                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
-                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
-                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                <input
+                  type="radio"
+                  name="rating-6"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-6"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-6"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-6"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-6"
+                  class="mask mask-star-2 bg-orange-400"
+                />
               </div>
               <p class="text-[#F85559]">Details</p>
             </div>
           </div>
           <!-- card-4 -->
-          <div class="card w-72 lg:w-60 rounded-sm border py-8 space-y-4 mx-auto">
+          <div
+            class="card w-72 lg:w-60 rounded-sm border py-8 space-y-4 mx-auto"
+          >
             <figure>
-              <img
-                src="/images/fruit9.png"
-                alt="Shoes"
-              />
+              <img src="/images/fruit9.png" alt="Shoes" />
             </figure>
             <div class="px-10 text-center space-y-2">
               <h2 class="text-xl font-bold border-b-2 px-">12.90$ - 18.85$!</h2>
               <p>Banana</p>
               <div class="rating rating-sm gap-2">
-                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
-                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" checked />
-                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
-                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
-                <input type="radio" name="rating-6" class="mask mask-star-2 bg-orange-400" />
+                <input
+                  type="radio"
+                  name="rating-6"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-6"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-6"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-6"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-6"
+                  class="mask mask-star-2 bg-orange-400"
+                />
               </div>
               <p class="text-[#F85559]">Details</p>
             </div>
           </div>
         </div>
       </div>
+
+      <div class="max-w-screen-lg mx-auto px-0 py-2 my-16">
+        <div
+          class="hero min-h-[32rem]"
+          style="
+            background-image: url(https://daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.jpg);
+          "
+        >
+          <div class="hero-overlay bg-opacity-60"></div>
+          <div class="hero-content text-center text-neutral-content">
+            <div class="max-w-xl">
+              <h1 class="mb-5 text-5xl font-extrabold text-white">
+                Meet the team section
+              </h1>
+              <p class="text-white mb-5">
+                Contrary to popular belief, is not simply random text. It has
+                roots in a piece of classical Latin literature from 45 BC,
+                making it over 2000 years old.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
-    <footer></footer>
+    <footer>
+      <footer
+        class="footer footer-center p-24 bg-black text-base-content rounded"
+      >
+        <div class="lg:text-white flex">
+          <img src="./images/logo.png" alt="" class="h-12" />
+          <a class="btn btn-ghost normal-case text-xl lg:text-3xl">
+            Fruit Brust</a
+          >
+        </div>
+        <div class="grid grid-flow-col gap-10 text-white">
+          <a class="link link-hover">Home</a>
+          <a class="link link-hover">About us</a>
+          <a class="link link-hover">Shop</a>
+          <a class="link link-hover">All Fruits</a>
+          <a class="link link-hover">Support</a>
+          <a class="link link-hover">My Account</a>
+        </div>
+
+        <div>
+          <div class="grid grid-flow-col gap-4 text-white">
+            <a
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                class="fill-current"
+              >
+                <path
+                  d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"
+                ></path></svg
+            ></a>
+            <a
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                class="fill-current"
+              >
+                <path
+                  d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"
+                ></path></svg
+            ></a>
+            <a
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                class="fill-current"
+              >
+                <path
+                  d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"
+                ></path></svg
+            ></a>
+          </div>
+        </div>
+      </footer>
+    </footer>
   </body>
 </html>
