--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
         <div
           class="hero min-h-[32rem]"
           style="
-            background-image: url(https://daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.jpg);
+            background-image: url(images/banner1.png);
           "
         >
           <div class="hero-overlay bg-opacity-60"></div>
@@ -511,7 +511,7 @@
 
     <footer>
       <footer
-        class="footer footer-center p-24 bg-black text-base-content rounded"
+        class="footer footer-center py-24 px-4 bg-black text-base-content rounded"
       >
         <div class="lg:text-white flex">
           <img src="./images/logo.png" alt="" class="h-12" />
@@ -519,7 +519,7 @@
             Fruit Brust</a
           >
         </div>
-        <div class="grid grid-flow-col gap-10 text-white">
+        <div class="flex justify-center flex-wrap gap-7  text-white">
           <a class="link link-hover">Home</a>
           <a class="link link-hover">About us</a>
           <a class="link link-hover">Shop</a>
