--- a/index.html
+++ b/index.html
@@ -508,51 +508,189 @@
                 making it over 2000 years old.
               </p>
               <!-- members profile -->
-              <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 lg:gap-24">
+              <div
+                class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 lg:gap-24"
+              >
                 <!-- member-1 -->
-                <div class="w-[6.5rem] text-center mx-auto">
+                <div class="w-[6.8rem] text-center mx-auto space-y-2">
                   <img src="./images/member1.png" alt="" class="w-full" />
-                  <h3 class="text-md text-white font-medium">Awlad Hossain</h3>
-                  <p class="text-white text-sm">Fruits Expert</p>
-                  <div class="text-[#F85559] flex  justify-center gap-3 mt-2">
-                    <i class="fa-brands fa-facebook "></i>
+                  <h3 class="text-sm text-white font-medium">Awlad Hossain</h3>
+                  <p class="text-white text-xs">Fruits Expert</p>
+                  <div class="text-[#F85559] flex justify-center gap-3 mt-2">
+                    <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
                     <i class="fa-brands fa-linkedin"></i>
                   </div>
                 </div>
                 <!-- member-2 -->
-                <div class="w-[6.5rem] text-center mx-auto">
+                <div class="w-[6.8rem] text-center mx-auto space-y-2">
                   <img src="./images/member2.png" alt="" class="w-full" />
-                  <h3 class="text-md text-white font-medium">Awlad Hossain</h3>
-                  <p class="text-white text-sm">Fruits Expert</p>
-                  <div class="text-[#F85559] flex  justify-center gap-3 mt-2">
-                    <i class="fa-brands fa-facebook "></i>
+                  <h3 class="text-sm text-white font-medium">
+                    Safia Chowdhury
+                  </h3>
+                  <p class="text-white text-xs">Fruits Expert</p>
+                  <div class="text-[#F85559] flex justify-center gap-3 mt-2">
+                    <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
                     <i class="fa-brands fa-linkedin"></i>
                   </div>
                 </div>
                 <!-- member-3 -->
-                <div class="w-[6.5rem] text-center mx-auto">
+                <div class="w-[6.8rem] text-center mx-auto space-y-2">
                   <img src="./images/member3.png" alt="" class="w-full" />
-                  <h3 class="text-md text-white font-medium">Awlad Hossain</h3>
-                  <p class="text-white text-sm">Fruits Expert</p>
-                  <div class="text-[#F85559] flex  justify-center gap-3 mt-2">
-                    <i class="fa-brands fa-facebook "></i>
+                  <h3 class="text-sm text-white font-medium">Rokib Hossain</h3>
+                  <p class="text-white text-xs">Fruits Expert</p>
+                  <div class="text-[#F85559] flex justify-center gap-3 mt-2">
+                    <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
                     <i class="fa-brands fa-linkedin"></i>
                   </div>
                 </div>
                 <!-- member-4 -->
-                <div class="w-[6.5rem] text-center mx-auto">
+                <div class="w-[6.8rem] text-center mx-auto space-y-2">
                   <img src="./images/member4.png" alt="" class="w-full" />
-                  <h3 class="text-md text-white font-medium">Awlad Hossain</h3>
-                  <p class="text-white text-sm">Fruits Expert</p>
-                  <div class="text-[#F85559] flex  justify-center gap-3 mt-2">
-                    <i class="fa-brands fa-facebook "></i>
+                  <h3 class="text-sm text-white font-medium">Chaity</h3>
+                  <p class="text-white text-xs">Fruits Expert</p>
+                  <div class="text-[#F85559] flex justify-center gap-3 mt-2">
+                    <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
                     <i class="fa-brands fa-linkedin"></i>
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Why choose us -->
+
+      <div class="max-w-screen-lg mx-auto px-0 py-2 my-16">
+        <h2 class="text-center text-3xl font-extrabold mx-auto">
+          Why Choose Us
+        </h2>
+        <p class="text-center max-w-[40rem] mx-auto">
+          Contrary to popular belief, is not simply random text. It has roots in
+          a piece of classical Latin literature from 45 BC, making it over 2000
+          years old.
+        </p>
+        <!-- services -->
+        <div
+          class="mt-14 flex flex-col lg:flex-row justify-center items-stretch gap-4"
+        >
+          <!-- about us -->
+          <div class="order-2 mx-auto text-center lg:text-left">
+            <!-- service 1 -->
+            <div class="lg:flex gap-3 mb-5">
+              <div
+                class="w-14 h-14 lg:h-8 bg-gray-300 flex justify-center items-center rounded-full mt-2 mx-auto"
+              >
+                <img src="./images/icon-1.png" alt="" class="w-1/3 lg:w-2/3" />
+              </div>
+              <div class="space-y-2 max-w-[22rem]">
+                <h4 class="text-xl font-bold">Dedicated Team</h4>
+                <hr class="w-24 mx-auto lg:mx-0 border-black border-b-1" />
+                <p class="text-sm">
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+            </div>
+            <!-- service 2 -->
+            <div class="lg:flex gap-3 mb-5">
+              <div
+                class="w-14 h-14 lg:h-8 bg-gray-300 flex justify-center items-center rounded-full mt-2 mx-auto"
+              >
+                <img src="./images/icon-2.png" alt="" class="w-1/3 lg:w-2/3" />
+              </div>
+              <div class="space-y-2 max-w-[22rem]">
+                <h4 class="text-xl font-bold">Fresh is Best</h4>
+                <hr class="w-24 mx-auto lg:mx-0 border-black border-b-1" />
+                <p class="text-sm">
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+            </div>
+            <!-- service 3 -->
+            <div class="lg:flex gap-3 mb-5">
+              <div
+                class="w-14 h-14 lg:h-8 bg-gray-300 flex justify-center items-center rounded-full mt-2 mx-auto"
+              >
+                <img src="./images/icon-3.png" alt="" class="w-1/3 lg:w-2/3" />
+              </div>
+              <div class="space-y-2 max-w-[22rem]">
+                <h4 class="text-xl font-bold">Gift Certificates</h4>
+                <hr class="w-24 mx-auto lg:mx-0 border-black border-b-1" />
+                <p class="text-sm">
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- banner-image -->
+          <div class="flex-grow order-1 lg:order-2 mx-auto">
+            <img
+              src="./images/whychoose1.png"
+              alt=""
+              class="w-[24rem] h-[18.5rem]"
+            />
+          </div>
+          <!-- about-us -->
+          <div class="order-3 mx-auto">
+            <!-- service 4 -->
+            <div class="lg:flex gap-3 mb-5 lg:flex-row-reverse">
+              <div
+                class="w-14 h-14 lg:h-8 bg-gray-300 flex justify-center items-center rounded-full mt-2 mx-auto"
+              >
+                <img src="./images/icon-4.png" alt="" class="w-1/3 lg:w-2/3" />
+              </div>
+              <div
+                class="space-y-2 max-w-[22rem] text-center lg:text-right lg:justify-end"
+              >
+                <h4 class="text-xl font-bold">Integrated Supplier</h4>
+                <hr class="lg:ml-auto mx-auto lg:mx-0 w-24 border-black border-b-1" />
+                <p class="text-sm">
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+            </div>
+            <!-- service 5 -->
+            <div class="lg:flex gap-3 mb-5 lg:flex-row-reverse">
+              <div
+                class="w-14 h-14 lg:h-8 bg-gray-300 flex justify-center items-center rounded-full mt-2 mx-auto"
+              >
+                <img src="./images/icon-5.png" alt="" class="w-1/3 lg:w-2/3" />
+              </div>
+              <div
+                class="space-y-2 max-w-[22rem] text-center lg:text-right lg:justify-end"
+              >
+                <h4 class="text-xl font-bold">Sustainable Practice</h4>
+                <hr class="lg:ml-auto mx-auto lg:mx-0 w-24 border-black border-b-1" />
+                <p class="text-sm">
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
+              </div>
+            </div>
+            <!-- service 6 -->
+            <div class="lg:flex gap-3 mb-5 lg:flex-row-reverse ">
+              <div
+                class="w-14 h-14 lg:h-8 bg-gray-300 flex justify-center items-center rounded-full mt-2 mx-auto"
+              >
+                <img src="./images/icon-6.png" alt="" class="w-1/3 lg:w-2/3" />
+              </div>
+              <div
+                class="space-y-2 max-w-[22rem] text-center lg:text-right lg:justify-end"
+              >
+                <h4 class="text-xl font-bold">The Benefits Only</h4>
+                <hr class="lg:ml-auto mx-auto lg:mx-0 w-24 border-black border-b-1" />
+                <p class="text-sm">
+                  Professional employees are there for you to pick the most
+                  amazing and fresh fruits.
+                </p>
               </div>
             </div>
           </div>
@@ -563,7 +701,7 @@
     <footer
       class="footer footer-center py-24 px-4 bg-black text-base-content rounded"
     >
-      <div class="lg:text-white flex">
+      <div class="text-white flex">
         <img src="./images/logo.png" alt="" class="h-12" />
         <a class="btn btn-ghost normal-case text-xl lg:text-3xl">
           Fruit Brust</a
