--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <div id="slide1" class="carousel-item relative w-full">
             <div
               class="hero min-h-[24rem] bg-cover bg-center"
-              style="background-image: url(/images/banner1.png)"
+              style="background-image: url(./images/banner1.png)"
             >
               <div
                 class="carousel-overlay flex flex-col items-center justify-center bg-black bg-opacity-60 w-full h-full font-extrabold"
@@ -162,7 +162,7 @@
           <div id="slide2" class="carousel-item relative w-full">
             <div
               class="hero min-h-[24rem] bg-cover bg-center"
-              style="background-image: url(/images/banner3.png)"
+              style="background-image: url(./images/banner3.png)"
             >
               <div
                 class="carousel-overlay flex flex-col items-center justify-center bg-black bg-opacity-60 w-full h-full font-extrabold"
@@ -199,7 +199,7 @@
           <div id="slide3" class="carousel-item relative w-full">
             <div
               class="hero min-h-[24rem] bg-cover bg-center"
-              style="background-image: url(/images/banner2.png)"
+              style="background-image: url(./images/banner2.png)"
             >
               <div
                 class="carousel-overlay flex flex-col items-center justify-center bg-black bg-opacity-60 w-full h-full font-extrabold"
@@ -236,7 +236,7 @@
           <div id="slide4" class="carousel-item relative w-full">
             <div
               class="hero min-h-[24rem] bg-cover bg-center"
-              style="background-image: url(/images/banner4.png)"
+              style="background-image: url(./images/banner4.png)"
             >
               <div
                 class="carousel-overlay flex flex-col items-center justify-center bg-black bg-opacity-60 w-full h-full font-extrabold"
