bug fix in hero section

--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
               style="background-image: url(./images/banner1.png)"
             >
               <div
-                class="carousel-overlay flex flex-col items-center justify-center bg-black bg-opacity-60 w-full h-full font-extrabold"
+                class="carousel-overlay flex flex-col items-center justify-center bg-black bg-opacity-60 w-full h-full font-extrabold space-y-5"
               >
                 <h1 class="text-4xl lg:text-5xl font-extrabold text-white mb-4 text-center">
                   Exotic tastes at your <br />
                   doorstep
                 </h1>
-                <p class="text-white mb-6 font-light">
+                <p class="text-white font-light w-[75%] text-center">
                   We supply highly quality organic products
                 </p>
                 <a
@@ -171,7 +171,7 @@
                   Exotic tastes at your <br />
                   doorstep
                 </h1>
-                <p class="text-white mb-6">
+                <p class="text-white font-light w-[75%] text-center">
                   We supply highly quality organic products
                 </p>
                 <a
@@ -208,7 +208,7 @@
                   Exotic tastes at your <br />
                   doorstep
                 </h1>
-                <p class="text-white mb-6">
+                <p class="text-white font-light w-[75%] text-center">
                   We supply highly quality organic products
                 </p>
                 <a
@@ -245,7 +245,7 @@
                   Exotic tastes at your <br />
                   doorstep
                 </h1>
-                <p class="text-white mb-6">
+                <p class="text-white font-light w-[75%] text-center">
                   We supply highly quality organic products
                 </p>
                 <a
