--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <header>
       <!-- Navigation bar -->
       <nav
-        class="max-w-screen-lg mx-auto lg:bg-[#F85559] rounded-full px-5 py-2 my-5"
+        class="max-w-screen-lg mx-auto lg:bg-[#F85559] rounded-full lg:px-5 py-2 my-5"
       >
         <div class="navbar flex justify-between">
           <div class="text-white text-sm hidden lg:block">
